@@ -1481,7 +1481,8 @@ AUIDLL_OBJECTS =  \
 	$(OBJS)\auidll_auibook.obj \
 	$(OBJS)\auidll_auibar.obj \
 	$(OBJS)\auidll_tabmdi.obj \
-	$(OBJS)\auidll_tabart.obj
+	$(OBJS)\auidll_tabart.obj \
+	$(OBJS)\auidll_xh_auinotbk.obj
 AUIDLL_RESOURCES =  \
 	$(OBJS)\auidll_version.res
 AUILIB_CXXFLAGS = /M$(__RUNTIME_LIBS_472)$(__DEBUGRUNTIME) /DWIN32 \
@@ -1505,7 +1506,8 @@ AUILIB_OBJECTS =  \
 	$(OBJS)\auilib_auibook.obj \
 	$(OBJS)\auilib_auibar.obj \
 	$(OBJS)\auilib_tabmdi.obj \
-	$(OBJS)\auilib_tabart.obj
+	$(OBJS)\auilib_tabart.obj \
+	$(OBJS)\auilib_xh_auinotbk.obj
 RIBBONDLL_CXXFLAGS = /M$(__RUNTIME_LIBS_488)$(__DEBUGRUNTIME) /DWIN32 \
 	$(__DEBUGINFO) \
 	/Fd$(LIBDIRNAME)\wx$(PORTNAME)$(WXUNIVNAME)$(WX_VERSION_NODOT)$(WXUNICODEFLAG)$(WXDEBUGFLAG)$(WX_LIB_FLAVOUR)_ribbon$(WXCOMPILER)$(VENDORTAG).pdb \
@@ -2014,6 +2016,7 @@ ____MONOLIB_GUI_SRC_FILENAMES_OBJECTS =  \
 	$(OBJS)\monodll_auibar.obj \
 	$(OBJS)\monodll_tabmdi.obj \
 	$(OBJS)\monodll_tabart.obj \
+	$(OBJS)\monodll_xh_auinotbk.obj \
 	$(OBJS)\monodll_advprops.obj \
 	$(OBJS)\monodll_editors.obj \
 	$(OBJS)\monodll_manager.obj \
@@ -2818,6 +2821,7 @@ ____MONOLIB_GUI_SRC_FILENAMES_1_OBJECTS =  \
 	$(OBJS)\monolib_auibar.obj \
 	$(OBJS)\monolib_tabmdi.obj \
 	$(OBJS)\monolib_tabart.obj \
+	$(OBJS)\monolib_xh_auinotbk.obj \
 	$(OBJS)\monolib_advprops.obj \
 	$(OBJS)\monolib_editors.obj \
 	$(OBJS)\monolib_manager.obj \
@@ -7898,6 +7902,9 @@ $(OBJS)\monodll_tabmdi.obj: ..\..\src\aui\tabmdi.cpp
 $(OBJS)\monodll_tabart.obj: ..\..\src\aui\tabart.cpp
 	$(CXX) /c /nologo /TP /Fo$@ $(MONODLL_CXXFLAGS) ..\..\src\aui\tabart.cpp
 
+$(OBJS)\monodll_xh_auinotbk.obj: ..\..\src\xrc\xh_auinotbk.cpp
+	$(CXX) /c /nologo /TP /Fo$@ $(MONODLL_CXXFLAGS) ..\..\src\xrc\xh_auinotbk.cpp
+
 $(OBJS)\monodll_advprops.obj: ..\..\src\propgrid\advprops.cpp
 	$(CXX) /c /nologo /TP /Fo$@ $(MONODLL_CXXFLAGS) ..\..\src\propgrid\advprops.cpp
 
@@ -10341,6 +10348,9 @@ $(OBJS)\monolib_tabmdi.obj: ..\..\src\aui\tabmdi.cpp
 
 $(OBJS)\monolib_tabart.obj: ..\..\src\aui\tabart.cpp
 	$(CXX) /c /nologo /TP /Fo$@ $(MONOLIB_CXXFLAGS) ..\..\src\aui\tabart.cpp
+
+$(OBJS)\monolib_xh_auinotbk.obj: ..\..\src\xrc\xh_auinotbk.cpp
+	$(CXX) /c /nologo /TP /Fo$@ $(MONOLIB_CXXFLAGS) ..\..\src\xrc\xh_auinotbk.cpp
 
 $(OBJS)\monolib_advprops.obj: ..\..\src\propgrid\advprops.cpp
 	$(CXX) /c /nologo /TP /Fo$@ $(MONOLIB_CXXFLAGS) ..\..\src\propgrid\advprops.cpp
@@ -16391,6 +16401,9 @@ $(OBJS)\auidll_tabmdi.obj: ..\..\src\aui\tabmdi.cpp
 $(OBJS)\auidll_tabart.obj: ..\..\src\aui\tabart.cpp
 	$(CXX) /c /nologo /TP /Fo$@ $(AUIDLL_CXXFLAGS) ..\..\src\aui\tabart.cpp
 
+$(OBJS)\auidll_xh_auinotbk.obj: ..\..\src\xrc\xh_auinotbk.cpp
+	$(CXX) /c /nologo /TP /Fo$@ $(AUIDLL_CXXFLAGS) ..\..\src\xrc\xh_auinotbk.cpp
+
 $(OBJS)\auilib_dummy.obj: ..\..\src\common\dummy.cpp
 	$(CXX) /c /nologo /TP /Fo$@ $(AUILIB_CXXFLAGS) /Ycwx/wxprec.h ..\..\src\common\dummy.cpp
 
@@ -16414,6 +16427,9 @@ $(OBJS)\auilib_tabmdi.obj: ..\..\src\aui\tabmdi.cpp
 
 $(OBJS)\auilib_tabart.obj: ..\..\src\aui\tabart.cpp
 	$(CXX) /c /nologo /TP /Fo$@ $(AUILIB_CXXFLAGS) ..\..\src\aui\tabart.cpp
+
+$(OBJS)\auilib_xh_auinotbk.obj: ..\..\src\xrc\xh_auinotbk.cpp
+	$(CXX) /c /nologo /TP /Fo$@ $(AUILIB_CXXFLAGS) ..\..\src\xrc\xh_auinotbk.cpp
 
 $(OBJS)\ribbondll_dummy.obj: ..\..\src\common\dummy.cpp
 	$(CXX) /c /nologo /TP /Fo$@ $(RIBBONDLL_CXXFLAGS) /Ycwx/wxprec.h ..\..\src\common\dummy.cpp
