@@ -224,6 +224,7 @@ ____MONOLIB_GUI_SRC_FILENAMES_OBJECTS =  &
 	$(OBJS)\monodll_auibar.obj &
 	$(OBJS)\monodll_tabmdi.obj &
 	$(OBJS)\monodll_tabart.obj &
+	$(OBJS)\monodll_xh_auinotbk.obj &
 	$(OBJS)\monodll_advprops.obj &
 	$(OBJS)\monodll_editors.obj &
 	$(OBJS)\monodll_manager.obj &
@@ -1033,6 +1034,7 @@ ____MONOLIB_GUI_SRC_FILENAMES_1_OBJECTS =  &
 	$(OBJS)\monolib_auibar.obj &
 	$(OBJS)\monolib_tabmdi.obj &
 	$(OBJS)\monolib_tabart.obj &
+	$(OBJS)\monolib_xh_auinotbk.obj &
 	$(OBJS)\monolib_advprops.obj &
 	$(OBJS)\monolib_editors.obj &
 	$(OBJS)\monolib_manager.obj &
@@ -4929,7 +4931,8 @@ AUIDLL_OBJECTS =  &
 	$(OBJS)\auidll_auibook.obj &
 	$(OBJS)\auidll_auibar.obj &
 	$(OBJS)\auidll_tabmdi.obj &
-	$(OBJS)\auidll_tabart.obj
+	$(OBJS)\auidll_tabart.obj &
+	$(OBJS)\auidll_xh_auinotbk.obj
 AUILIB_CXXFLAGS = $(__DEBUGINFO) $(__OPTIMIZEFLAG) $(__THREADSFLAG) &
 	$(__RUNTIME_LIBS) -d__WXMSW__ $(__WXUNIV_DEFINE_p) $(__DEBUG_DEFINE_p) &
 	$(__NDEBUG_DEFINE_p) $(__EXCEPTIONS_DEFINE_p) $(__RTTI_DEFINE_p) &
@@ -4947,7 +4950,8 @@ AUILIB_OBJECTS =  &
 	$(OBJS)\auilib_auibook.obj &
 	$(OBJS)\auilib_auibar.obj &
 	$(OBJS)\auilib_tabmdi.obj &
-	$(OBJS)\auilib_tabart.obj
+	$(OBJS)\auilib_tabart.obj &
+	$(OBJS)\auilib_xh_auinotbk.obj
 RIBBONDLL_CXXFLAGS = -bd $(__DEBUGINFO) $(__OPTIMIZEFLAG) $(__THREADSFLAG) &
 	$(__RUNTIME_LIBS) -d__WXMSW__ $(__WXUNIV_DEFINE_p) $(__DEBUG_DEFINE_p) &
 	$(__NDEBUG_DEFINE_p) $(__EXCEPTIONS_DEFINE_p) $(__RTTI_DEFINE_p) &
@@ -7656,6 +7660,9 @@ $(OBJS)\monodll_tabmdi.obj :  .AUTODEPEND ..\..\src\aui\tabmdi.cpp
 $(OBJS)\monodll_tabart.obj :  .AUTODEPEND ..\..\src\aui\tabart.cpp
 	$(CXX) -bt=nt -zq -fo=$^@ $(MONODLL_CXXFLAGS) $<
 
+$(OBJS)\monodll_xh_auinotbk.obj :  .AUTODEPEND ..\..\src\xrc\xh_auinotbk.cpp
+	$(CXX) -bt=nt -zq -fo=$^@ $(MONODLL_CXXFLAGS) $<
+
 $(OBJS)\monodll_advprops.obj :  .AUTODEPEND ..\..\src\propgrid\advprops.cpp
 	$(CXX) -bt=nt -zq -fo=$^@ $(MONODLL_CXXFLAGS) $<
 
@@ -10098,6 +10105,9 @@ $(OBJS)\monolib_tabmdi.obj :  .AUTODEPEND ..\..\src\aui\tabmdi.cpp
 	$(CXX) -bt=nt -zq -fo=$^@ $(MONOLIB_CXXFLAGS) $<
 
 $(OBJS)\monolib_tabart.obj :  .AUTODEPEND ..\..\src\aui\tabart.cpp
+	$(CXX) -bt=nt -zq -fo=$^@ $(MONOLIB_CXXFLAGS) $<
+
+$(OBJS)\monolib_xh_auinotbk.obj :  .AUTODEPEND ..\..\src\xrc\xh_auinotbk.cpp
 	$(CXX) -bt=nt -zq -fo=$^@ $(MONOLIB_CXXFLAGS) $<
 
 $(OBJS)\monolib_advprops.obj :  .AUTODEPEND ..\..\src\propgrid\advprops.cpp
@@ -16149,6 +16159,9 @@ $(OBJS)\auidll_tabmdi.obj :  .AUTODEPEND ..\..\src\aui\tabmdi.cpp
 $(OBJS)\auidll_tabart.obj :  .AUTODEPEND ..\..\src\aui\tabart.cpp
 	$(CXX) -bt=nt -zq -fo=$^@ $(AUIDLL_CXXFLAGS) $<
 
+$(OBJS)\auidll_xh_auinotbk.obj :  .AUTODEPEND ..\..\src\xrc\xh_auinotbk.cpp
+	$(CXX) -bt=nt -zq -fo=$^@ $(AUIDLL_CXXFLAGS) $<
+
 $(OBJS)\auilib_dummy.obj :  .AUTODEPEND ..\..\src\common\dummy.cpp
 	$(CXX) -bt=nt -zq -fo=$^@ $(AUILIB_CXXFLAGS) $<
 
@@ -16171,6 +16184,9 @@ $(OBJS)\auilib_tabmdi.obj :  .AUTODEPEND ..\..\src\aui\tabmdi.cpp
 	$(CXX) -bt=nt -zq -fo=$^@ $(AUILIB_CXXFLAGS) $<
 
 $(OBJS)\auilib_tabart.obj :  .AUTODEPEND ..\..\src\aui\tabart.cpp
+	$(CXX) -bt=nt -zq -fo=$^@ $(AUILIB_CXXFLAGS) $<
+
+$(OBJS)\auilib_xh_auinotbk.obj :  .AUTODEPEND ..\..\src\xrc\xh_auinotbk.cpp
 	$(CXX) -bt=nt -zq -fo=$^@ $(AUILIB_CXXFLAGS) $<
 
 $(OBJS)\ribbondll_dummy.obj :  .AUTODEPEND ..\..\src\common\dummy.cpp
