@@ -7892,6 +7892,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\include\wx\xrc\xh_auinotbk.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\include\wx\xrc\xh_bannerwindow.h"
 				>
 			</File>
